Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="ag1-4xHIEPeNX2CPewgS8ZOl19oUKoT-uYmOiHTEuLo" />
     <link rel="icon" type="image/jpeg" href="/images/BSU-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/reset.css" />
