--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/images/BSU-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/reset.css" />
-    <link rel="stylesheet" href="/src/utility.css" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/reset.css" />
+    <link rel="stylesheet" href="src/utility.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Interlake BSU</title>
   </head>
   <body>
@@ -209,6 +209,6 @@
         </div>
       </section>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
