Added lines for Search engines

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Official website of Interlake High School Black Student Union (BSU). Events, resources, and community.">
+    <meta name="keywords" content="Interlake, BSU, Black Student Union, High School">
+    <meta name="author" content="Merwan Ibrahim">
     <link rel="icon" type="image/jpeg" href="/images/BSU-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/reset.css" />
