removed extra slashes for the imags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Official website of Interlake High School Black Student Union (BSU). Events, resources, and community.">
     <meta name="keywords" content="Interlake, BSU, Black Student Union, High School">
     <meta name="author" content="Merwan Ibrahim">
-    <link rel="icon" type="image/jpeg" href="/images/BSU-icon.png" />
+    <link rel="icon" type="image/jpeg" href="images/BSU-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/reset.css" />
     <link rel="stylesheet" href="src/utility.css" />
@@ -16,7 +16,7 @@
     <header class="primary-header | px-3">
       <div class="nav-wrapper">
         <a href="#home" class="logo">
-          <img src="/images/Interlake-BSU-logo.jpg" alt="BSU Logo" />
+          <img src="images/Interlake-BSU-logo.jpg" alt="BSU Logo" />
         </a>
         <button
           class="mobile-nav-toggle | push-right"
